--- a/examples/index.html
+++ b/examples/index.html
@@ -9,5 +9,6 @@
   <body>
     <p>Players on hypixel.net: <b><span data-playercounter-ip="mc.hypixel.net">0</span></b></p>
     <p>Players on play.cubecraft.net: <b><span data-playercounter-ip="play.cubecraft.net" data-playercounter-format="{online}/{max}">0</span></b></p>
+    <p>Mineplex is currently <span data-playercounter-ip="us.mineplex.com" data-playercounter-status>...</span></p>
   </body>
 </html>
